// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SearchSuggestionTrackItem > matches the snapshot 1`] = `
"<div class="trackPlayPauseHover centerItems searchItem">
  <div class="overlapWrapper trackPlayPause withImage">
    <div class="centerAll preloadImage overlap preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Image" class="image" draggable="false" loading="lazy" src="image-0"></div>
    <p class="overlap trackNumber visuallyHidden">1</p>
    <div class="overlap playPauseWrapper"><button class="centerItems buttonLink centerAll themeHoverButton buttonLink centerAll themeHoverButton buttonLink" draggable="false" type="button">
        <phplay aria-hidden="true" class="icon" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play track </span>
      </button></div>
  </div>
  <div class="searchName"><span class="clamp">track-0</span>
    <ul class="commaList clamp smallFont">
      <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link">name</a></li>
      <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link">name1</a></li>
    </ul>
  </div><button class="centerItems buttonLink" draggable="false" type="button" title="Add to queue">
    <phpluscircle aria-hidden="true" class="icon" size="24" weight="regular"></phpluscircle><span class="clamp text visuallyHidden"> Add to queue </span>
  </button>
</div>"
`;

exports[`SearchSuggestionTrackItem > when artists is an empty array > matches the snapshot 1`] = `
"<div class="trackPlayPauseHover centerItems searchItem">
  <div class="overlapWrapper trackPlayPause withImage">
    <div class="centerAll preloadImage overlap preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Image" class="image" draggable="false" loading="lazy" src="image-0"></div>
    <p class="overlap trackNumber visuallyHidden">1</p>
    <div class="overlap playPauseWrapper"><button class="centerItems buttonLink centerAll themeHoverButton buttonLink centerAll themeHoverButton buttonLink" draggable="false" type="button">
        <phplay aria-hidden="true" class="icon" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play track </span>
      </button></div>
  </div>
  <div class="searchName"><span class="clamp">track-0</span>
    <!--v-if-->
  </div><button class="centerItems buttonLink" draggable="false" type="button" title="Add to queue">
    <phpluscircle aria-hidden="true" class="icon" size="24" weight="regular"></phpluscircle><span class="clamp text visuallyHidden"> Add to queue </span>
  </button>
</div>"
`;
